// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchInput should grey out icon when disabled 1`] = `
.circuit-0 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-3 {
  position: relative;
}

.circuit-1 {
  position: absolute;
  top: 1px;
  left: 1px;
  pointer-events: none;
  color: #666;
  padding: 12px;
  height: 40px;
  width: 40px;
}

.circuit-4 {
  font-size: 13px;
  line-height: 20px;
  display: block;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
  margin-bottom: 16px;
}

label .circuit-4:not(label),
label + .circuit-4:not(label) {
  margin-top: 4px;
}

.circuit-2 {
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: calc(8px + 1px) 12px;
  -webkit-transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  background-color: #E6E6E6;
  padding-left: 40px;
  padding-right: 40px;
  box-shadow: 0 0 0 1px #999;
}

.circuit-2::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-2::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-2:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-2::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

<label
  class="circuit-4"
  disabled=""
  for="input_2"
>
  <span
    class="circuit-0"
  >
    Search
  </span>
  <div
    class="circuit-3"
  >
    <svg
      class="circuit-1"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M2 7a5 5 0 1110 0A5 5 0 012 7zm5-7a7 7 0 104.192 12.606l3.1 3.101a1 1 0 001.415-1.414l-3.1-3.1A7 7 0 007 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <input
      class="circuit-2"
      disabled=""
      id="input_2"
      type="text"
      value=""
    />
  </div>
</label>
`;

exports[`SearchInput should render with default styles 1`] = `
.circuit-4 {
  font-size: 13px;
  line-height: 20px;
  display: block;
  margin-bottom: 16px;
}

label .circuit-4:not(label),
label + .circuit-4:not(label) {
  margin-top: 4px;
}

.circuit-0 {
  display: inline-block;
  margin-bottom: 4px;
}

.circuit-3 {
  position: relative;
}

.circuit-1 {
  position: absolute;
  top: 1px;
  left: 1px;
  pointer-events: none;
  color: #666;
  padding: 12px;
  height: 40px;
  width: 40px;
}

.circuit-2 {
  -webkit-appearance: none;
  background-color: #FFF;
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: calc(8px + 1px) 12px;
  -webkit-transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  padding-left: 40px;
  padding-right: 40px;
  box-shadow: 0 0 0 1px #999;
}

.circuit-2::-webkit-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-2::-moz-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-2:-ms-input-placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-2::placeholder {
  color: #999;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-2:hover {
  box-shadow: 0 0 0 1px #666;
}

.circuit-2:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-2:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<label
  class="circuit-4"
  for="input_1"
>
  <span
    class="circuit-0"
  >
    Search
  </span>
  <div
    class="circuit-3"
  >
    <svg
      class="circuit-1"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M2 7a5 5 0 1110 0A5 5 0 012 7zm5-7a7 7 0 104.192 12.606l3.1 3.101a1 1 0 001.415-1.414l-3.1-3.1A7 7 0 007 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <input
      class="circuit-2"
      id="input_1"
      type="text"
      value=""
    />
  </div>
</label>
`;
